Add buildSrc, modify gradle scripts